Fixed contrast errors in about.html

--- a/project1/styles/about_styles.css
+++ b/project1/styles/about_styles.css
@@ -58,7 +58,7 @@
 
 .group-info-section dl dt {
 	font-style: italic;
-	color: gray;
+	color: #555555;
 	font-weight: 100;
 }
 
