--- a/project1/styles/homepage_styles.css
+++ b/project1/styles/homepage_styles.css
@@ -61,7 +61,7 @@ hr {
 a {
     text-decoration: none;
     font-weight: 500;
-    color: rgb(30, 173, 2);
+    color: rgb(20, 120, 0);
 }
 
 a:hover {
